syntax = 'proto3'; 

import "Player.proto";

message PlayerUpdate { 
  uint32 player_id = 1; 
  Player player = 2; 
}